# eidolon

./: .env.example  .gitignore  AGENTS.md  AGENT_HIERARCHY.md  CLAUDE.md  CODE_REVIEW.md  GEMINI_ENHANCEMENT_SUGGESTIONS.md  HIERARCHICAL_AGENT_SYSTEM.md  INCREMENTAL_ANALYSIS.md  LARGE_PROJECT_TEST_RESULTS.md  LLM_CONNECTION_ARCHITECTURE.md  MIGRATION_SUMMARY.md  MULTI_PROVIDER_GUIDE.md  README.md  REAL_LLM_TEST_RESULTS.md  RELIABILITY_ANALYSIS.md  RELIABILITY_IMPLEMENTATION_PLAN.md  STATUS.md  TOP_DOWN_DECOMPOSITION.md  UX_REVIEW.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  shopfront_spec.py  test_calculator_implementation.py  test_end_to_end_calculator.py  test_full_e2e_shopfront.py  test_function_planner_review.py  test_interactive_ba.py  test_linting_agent.py  test_multiple_tool_results.py  test_orchestrator_end_to_end.py  test_phase3_performance_analysis.py  test_rest_api_implementation.py  test_review_loop.py  test_shopfront_shakedown.py  test_simple_end_to_end.py  test_simple_json.py  test_top_down_implementation.py  (+1 more)
.orchestrator/: placements.jsonl
backend/: business_analyst.py  code_context_tools.py  code_graph.py  code_writer.py  db_pool.py  design_context_tools.py  linting_agent.py  logging_config.py  main.py  orchestrator.py  request_context.py  requirements.txt  resource_limits.py  specialist_agents.py  test_cache.py  test_generator.py  test_parallel.py
docs/: CACHING.md  (+32 more)
mvp/: .env.example  AGENT_SDK_ARCHITECTURE.md  ARCHITECTURE.md  CLAUDE_SDK_INTEGRATION.md  IMPLEMENTATION_PLAN.md  MVP_README.md  OPENROUTER_SETUP.md  README.md  README_AGENT_SDK.md  READY_FOR_TESTING.md  SCHEMA.sql  SPECIALIZED_AGENTS.md  TDD_REFACTORING.md  VISION.md  WEEK1_COMPLETE.md  WEEK2_COMPLETE.md  WEEK3_COMPLETE.md  analyze_file.py  analyze_file_simple.py  demo_agent_sdk.py  demo_function_agent.py  demo_module_agent.py  demo_refactoring.py  preflight_check.py  pyproject.toml  test_buggy_code.py  verify_week1.py
mvp/.claude/: CLAUDE.md
mvp/.claude/agents/: complexity-analyzer.md  vue-orchestration-ux.md
mvp/.claude/skills/: code-refactoring.md
mvp/examples/: structured_outputs_example.py
mvp/src/eidolon_mvp/: __init__.py
mvp/src/eidolon_mvp/agents/: __init__.py  base.py  function_agent.py  models.py  module_agent.py  parallel.py  prompts.py  refactoring_agent.py  static_checks.py  tasks.py
mvp/src/eidolon_mvp/api/: server.py
mvp/src/eidolon_mvp/codegraph/: __init__.py  adapter.py
mvp/src/eidolon_mvp/llm/: __init__.py  cache.py  client.py  config.py
mvp/src/eidolon_mvp/memory/: __init__.py  agent_memory.py  store.py
mvp/src/eidolon_mvp/orchestrator/: __init__.py  agent_sdk_orchestrator.py  claude_agent.py
mvp/tests/: __init__.py  conftest.py
mvp/tests/agents/: test_base.py  test_function_agent.py  test_models.py  test_module_agent.py  test_static_checks.py
mvp/tests/llm/: __init__.py
mvp/tests/memory/: __init__.py
mvp/ui/: ARCHITECTURE.md  COMPONENT_DIAGRAM.md  DEVELOPMENT.md  INDEX.md  INSTALLATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  UX_DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mvp/ui/src/: App.vue  style.css
mvp/ui/src/components/: FileQueue.vue  FileUploadModal.vue  FindingsPanel.vue  OrchestrationView.vue
mvp/ui/src/services/: api.ts
mvp/ui/src/stores/: orchestration.ts
mvp/ui/src/types/: index.ts
(+264 files in other folders)
