[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eidolon"
version = "0.1.0"
description = "Hierarchical agent system backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "websockets==13.1",
  "python-multipart==0.0.18",
  "anthropic==0.39.0",
  "openai==1.58.1",
  "pydantic==2.10.5",
  "aiosqlite==0.20.0",
  "structlog==24.4.0",
  "prometheus-client==0.21.0",
  "psutil==6.1.0",
  "networkx>=3.2.1",
  "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.9",
  "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eidolon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
