[project]
name = "eidolon-mvp"
version = "0.1.0"
description = "Hierarchical agent system with persistent memory for code analysis"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "claude-agent-sdk>=0.1.0",
    "psycopg[binary]>=3.2.0",
    "click>=8.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[project.scripts]
eidolon-mvp = "eidolon_mvp.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
